--- a/account/templates/Home.html
+++ b/account/templates/Home.html
@@ -18,7 +18,7 @@
         </div>
         <div class="drop-down" id="drop-down">
             <img src="{%static 'Images/avatar.jpg'%}" alt="" class="avatar">
-            <h1 class="Name">Aanand Rimal</h1>
+            <h1 class="Name">{{user.get_full_name}}</h1>
         </div>
     </div>
     <div class="sub-menu-wrap" id="sub-menu">
@@ -26,8 +26,12 @@
             <ul>
                 <div class="sub-item"><i class="fas fa-gear sub-item-icon"></i><a href="#"></i>Settings<i class="fas fa-arrow-right arrow-icon"></i></a></div>
                 <div class="sub-item" id="password-popup"><i class="fas fa-key sub-item-icon"></i><a href="#"></i>Change Password<i class="fas fa-arrow-right arrow-icon"></i></a></div>
-                <button class="sub-item" id= ><i class="fas fa-right-from-bracket sub-item-icon"></i><a href="Login.html"></i>Logout<i class="fas fa-arrow-right arrow-icon"></i></a></button>
-            </ul>
+                
+                {%if user.is_authenticated%}
+                  <button class="sub-item" id= ><i class="fas fa-right-from-bracket sub-item-icon"></i><a href="logout"></i>Logout<i class="fas fa-arrow-right arrow-icon"></i></a></button>
+                {%endif%}
+            
+                </ul>
         </div>
      </div>
 
