--- a/account/templates/Navbar_Sidebar.html
+++ b/account/templates/Navbar_Sidebar.html
@@ -68,7 +68,7 @@
                 <ul>
                     <li class="menu_item active-menu"><a href="#"><i class="fas fa-house menu-icon"></i>Home</a></li>
                     <div class="menu_item" onclick="location.href='Your_Information.html'"><a href="Home.html"><a
-                                href="Your_Information.html"><i class="fas fa-circle-info menu-icon"></i>Your
+                                href="/yourinformation"><i class="fas fa-circle-info menu-icon"></i>Your
                                 Information</a></div>
                     <li class="menu_item"><a href="Attendance.html"><i
                                 class="fas fa-calendar-days menu-icon"></i>Attendance</a></li>
