Your information page update

--- a/account/templates/signup.html
+++ b/account/templates/signup.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 {%load static%}
 <html lang="en">
+
+{%include "Navbar_Sidebar.html%}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
