--- a/account/templates/Your_Information.html
+++ b/account/templates/Your_Information.html
@@ -1,19 +1,59 @@
 {%load static%}
-
 <!DOCTYPE html>
 <html lang="en">
+
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{%static 'Css/information.Css'%}">
-    <!-- <link rel="stylesheet" href="asstes/Css/Home.Css"> -->
+    <link rel="stylesheet" href="{%static 'Css/information.css'%}"">
+    <!-- <link rel="stylesheet" href="{%static 'Css/Home.Css'%}"> -->
     <script src="https://kit.fontawesome.com/7ee7d15580.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    {% include 'Navbar_Sidebar.html' %}
+    <div class="bg-animation">
+    </div>
     <div class="hero-content">
+        <div class="bubbles">
+            <span style="--i:11;"></span>
+            <span style="--i:12;"></span>
+            <span style="--i:24;"></span>
+            <span style="--i:10;"></span>
+            <span style="--i:14;"></span>
+            <span style="--i:23;"></span>
+            <span style="--i:18;"></span>
+            <span style="--i:16;"></span>
+            <span style="--i:19;"></span>
+            <span style="--i:14;"></span>
+            <span style="--i:20;"></span>
+            <span style="--i:22;"></span>
+            <span style="--i:25;"></span>
+            <span style="--i:18;"></span>
+            <span style="--i:21;"></span>
+            <span style="--i:15;"></span>
+            <span style="--i:13;"></span>
+            <span style="--i:26;"></span>
+            <span style="--i:17;"></span>
+            <span style="--i:14;"></span>
+            <span style="--i:28;"></span>
+            <span style="--i:22;"></span>
+            <span style="--i:18;"></span>
+            <span style="--i:16;"></span>
+            <span style="--i:19;"></span>
+            <span style="--i:13;"></span>
+            <span style="--i:26;"></span>
+            <span style="--i:17;"></span>
+            <span style="--i:14;"></span>
+            <span style="--i:28;"></span>
+            <span style="--i:22;"></span>
+            <span style="--i:14;"></span>
+            <span style="--i:20;"></span>
+            <span style="--i:22;"></span>
+            <span style="--i:25;"></span>
+        </div>
         <div class="hero main">
             <div class="Title-text">
                 <p>Your Information</p>
@@ -21,7 +61,7 @@
             <div class="your">
                 <div class="user-info">
                     <div class="user-image-info">
-                        <img src="{%static 'Images/img.png'%}" class="user-image">
+                        <img src="{%static 'Images/avatar.jpg'%}" class="user-image">
                     </div>
                     <div class="user-bottom text">
                         <p>Virat Kohli</p>
