changes as main from other repo

--- a/Karmachari_App/templates/Nav_Sidebar.html
+++ b/Karmachari_App/templates/Nav_Sidebar.html
@@ -71,7 +71,7 @@
                 <li class="menu_item {% if navbar == 'home'%} active-menu{%endif%}"><a href="/"><i class="fas fa-house menu-icon"></i>Home</a></li>
                 <li class="menu_item {% if navbar == 'yourinformation'%} active-menu{%endif%}"><a href="/information"><i class="fas fa-circle-info menu-icon"></i>Your Information</a></li>
                 <li class="menu_item {% if navbar == 'attendance'%} active-menu{%endif%}"><a href="/attendance"><i class="fas fa-calendar-days menu-icon"></i>Attendance</a></li>
-                <li class="menu_item"><a href=""><i class="fas fa-money-check-dollar menu-icon"></i>Salary Sheet</a></li>
+                <li class="menu_item {% if navbar == 'salary'%} active-menu{%endif%}"><a href="/salary"><i class="fas fa-money-check-dollar menu-icon"></i>Salary Sheet</a></li>
                 <li class="menu_item {% if navbar == 'leaves'%} active-menu{%endif%}"><a href="/leaves"><i class="fas fa-door-open menu-icon"></i>Leaves</a></li>
                 <li class="menu_item {% if navbar == 'notice'%} active-menu{%endif%}">
                     <a href="/notice">
