--- a/Karmachari_App/templates/Salary_Sheet.html
+++ b/Karmachari_App/templates/Salary_Sheet.html
@@ -1,92 +1,149 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="asstes/Css/Nav_sidebar.Css">
-    <!-- <link rel="stylesheet" href="asstes/Css/Home.Css"> -->
-    <script src="https://kit.fontawesome.com/7ee7d15580.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <p id="counter" style="display:none;">0</p>
-    <!-- =====================Nav Bar Section===================== -->
-    <div class="nav-bar">
-        <div class="logo_container">
-            <a href="#" class="logo">Karmachari</a>
-        </div>
-        <div class="drop-down" id="drop-down">
-            <img src="asstes/Images/avatar.jpg" alt="" class="avatar">
-            <h1 class="Name">Aanand Rimal</h1>
-        </div>
-    </div>
-    <div class="sub-menu-wrap" id="sub-menu">
-        <div class="sub-menu">
-            <ul>
-                <div class="sub-item"><i class="fas fa-gear sub-item-icon"></i><a href="#"></i>Settings<i class="fas fa-arrow-right arrow-icon"></i></a></div>
-                <div class="sub-item" id="password-popup"><i class="fas fa-key sub-item-icon"></i><a href="#"></i>Change Password<i class="fas fa-arrow-right arrow-icon"></i></a></div>
-                <button class="sub-item" id= ><i class="fas fa-right-from-bracket sub-item-icon"></i><a href="Login.html"></i>Logout<i class="fas fa-arrow-right arrow-icon"></i></a></button>
-            </ul>
-        </div>
-     </div>
 
-    <div class="side_bar">
-        <div class="container clock_section">
-            <img src="asstes/Images/avatar.jpg" alt="" class="avatar">
-            <div class="side-clock" id="clock">
-                <i class="far fa-clock clock-icon"></i>
-                <span id="hrs">00</span> : <span id="min">00</span> : <span id="sec">00</span>
-                <span id="session"> AM</span>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{%static 'assets/Css/Salary.css'%}">
+        <link rel="stylesheet" href="{%static 'assets/Css/Navbar.css'%}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+        <title>Salary</title>
+    </head>
+
+    <body>
+        {% include 'Nav_Sidebar.html' %}
+        <div class="container">
+            <div class="top-nav">
+                <h2>Salaries</h2>
             </div>
-            
-            <div class="check-in-out">
+            <main>
+                <hr class="horizontal-line">
+                <p>
+                <div class="view-notice">Salary slip</div>
+                </p>
+                <div class="main-notice">
+                    <div class="main-header">
+                        <p class="main-text">Show</p>
+                        <select class="main-text-middle">
+                            <option value="notice">2</option>
+                            <option value="notice">5</option>
+                            <option value="notice">10</option>
+                        </select>
+                        <p class="main-text-right">entries</p>
+                    </div>
+                    <input class="main-bottom" type="text" name="search" placeholder="search">
+                </div>
+                <div class="table-holder">
+                    <table class="content-table">
+                        <thead>
 
-                    <p class="Title-data"><span>Check-In : </span><br><span> Check-Out : </span></p>
+                            <tr>
+                                <th class="months">SALARY MONTHS</th>
+                                <th class="money">EARNINGS<i class="bi bi-cash list-icon"></i></th>
+                                <th class="money">DEDUCTIONS<i class="bi bi-cash list-icon"></i></th>
+                                <th class="money">NETSALARY   <i class="bi bi-cash-stack list-icon"></i></i></th>
+                                <th class="download">ACTIONS</th>
+                            </tr>
+
+                        </thead>
+
+                        <tbody>
+                            <optgroup>
+                                <tr>
+                                    <td>Februry 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
+                                <tr>
+                                    <td>March 2023</td>
+                                    <td>58000.00</td>
+                                    <td>5510.00</td>
+                                    <td>52490.00</td>
+                                    <td><i class="bi bi-download"></i></td>
+                                    <!-- <img class="img-sal" src="Fontend-design/images/download.jpeg" alt="">  -->
+                                </tr>
 
 
-                    <p class="time-data"><span id="in-time" class="time">--:--:-- --</span> <br><span id="out-time" class="time">--:--:-- --</span></p>
 
-            </div>
-            <button id="Check-in" class="check-inout-btn Check-in">Check In</button>
-            
+                            </optgroup>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- <div class="footer">
+                <a href="#" class="previous round">&#8249;</a>
+                <a href="#" class="next round">&#8250;</a>
+            </div> -->
+            </main>
         </div>
+        <script src="{% static 'assets/js/nav_sidebar.js' %}"></script>
+    </body>
 
-        <div class="container menu_elements">
-            <ul>
-                <li class="menu_item"><a href="Home.html"><i class="fas fa-house menu-icon"></i>Home</a></li>
-                <li class="menu_item"><a href="Your_Information.html"><i class="fas fa-circle-info menu-icon"></i>Your Information</a></li>
-                <li class="menu_item"><a href="Attendance.html"><i class="fas fa-calendar-days menu-icon"></i>Attendance</a></li>
-                <li class="menu_item active-menu"><a href="#"><i class="fas fa-money-check-dollar menu-icon"></i>Salary Sheet</a></li>
-                <li class="menu_item"><a href="Leaves.html"><i class="fas fa-door-open menu-icon"></i>Leaves</a></li>
-                <li class="menu_item"><a href="Notices.html"><i class="fas fa-bell menu-icon"></i>Notices</a></li>
-            </ul>
-        </div> 
-    </div>
-
-    <div class="container hero-section">
-       <p style="color: red;">CONTENT HERE!!</p>
-    </div>
-
-     
-    <div class="password-popup container">
-        <h1>CHANGE PASSWORD</h1>
-        <div class="close-icon">
-            <i class="fas fa-xmark"></i>
-        </div>
-        <form class="form" action="">
-            <p class="question">Current Password:</p>
-            <input class="Answer" type="password">
-            <p class="question">New Password:</p>
-            <input class="Answer" type="password">
-            <p class="question">Confirm Password:</p>
-            <input class="Answer" type="password"><br>
-            <input class="submit-btn" value="Save" type="submit"\>
-        </form>
-    </div>
-    <div id="loader-wrapper" class="loader-wrapper">
-        <span class="loader"><span class="loader-inner"></span></span>
-    </div>
-    <script src="asstes/javaScript/Nav_sidebar.js"></script>
-    <!-- <script src="asstes/javaScript/Home.js"></script> -->
-</body>
 </html>
